<resources>
    <string name="app_name">Crypton</string>
    <string name="stacks_text">Stacks is a production- ready library of stackable content blocks</string>
    <string name="text_premium">Get premium travel magazine</string>
    <string name="join_our_nnewsletter">Join our \nnewsletter</string>
    <string name="enter_your_email">Enter your Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_and_book_a_great_experience">Find and book a great experience</string>
    <string name="keep_calm_and_travel_on">Keep calm and travel on</string>
    <string name="stunning_nwork">Stunning \nWork</string>
    <string name="choose_destination">Choose Destination</string>
    <string name="select_and_rent_your_favourite_items">Select and rent your favourite items</string>
    <string name="category_new">New</string>
    <string name="title">Anchor</string>
    <string name="chair_name">Comfu</string>
    <string name="get_started">Get started</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_400">400$</string>
    <string name="desc_text">Nike sports spirit is choice of every athelete\n out there as Nike is devoted to enhance\n the quality of its products. Grab your pair\n you wont regret it.</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>